--- a/styles/style.css
+++ b/styles/style.css
@@ -77,7 +77,7 @@ body{
 }
 
 .logo{
-    height: 15rem;
+    height: 10rem;
     margin-top: 30vh;
     margin-left: 5vw;
     transition-duration: 0.4s;
@@ -703,6 +703,9 @@ color: var(--fcolor);
     border-bottom: 1px solid var(--scolor);
     display: flex;
     justify-content: center;
+    background-size: 80%;
+    background-repeat: no-repeat;
+    background-position: center;
 }
 
 .productoGondola .img img{
@@ -1083,6 +1086,9 @@ footer i {
     justify-content: center;
 }
 
+.closeResponsive1 {
+display: none;
+}
 
 
 
